tests/cases/pass/using_custom_package.cs
using JuanCarlos.Package;

namespace JuanCarlos.Package {
    class B {
        public static void JC() {
            Console.WriteLine("JuanCarlos");
        }
    }
    
    class Program {
        static void Main() {
            B.JC();
        }
    }
}
