tests/cases/fail/break_outside_loop.cs
class Program { static void Main() { break; } }
